--- a/helm3/6.4.0/skywalking/templates/oap-deployment.yaml
+++ b/helm3/6.4.0/skywalking/templates/oap-deployment.yaml
@@ -96,8 +96,16 @@ spec:
           value: {{ .Values.oap.envoy.als.enabled | quote}}
         {{- end }}
         - name: SW_STORAGE_ES_CLUSTER_NODES
-          value: "{{ include "call-nested" (list . "elasticsearch" "elasticsearch.client.fullname") }}:9200"
+          value: "{{ .Values.elasticsearch.client.service.name }}:9200"
         {{- range $key, $value :=  .Values.oap.env }}
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
+        volumeMounts:
+        - name: alarm-config
+          mountPath: /skywalking/config/alarm-settings.yml
+          subPath: alarm-settings.yml 
+      volumes:
+      - name: alarm-config
+        configMap:
+          name: skywalking-alarm-config        
