--- a/install-with-istio.yml
+++ b/install-with-istio.yml
@@ -132,7 +132,7 @@ spec:
       - name: wait-for-elasticsearch
         image: busybox:1.30
         imagePullPolicy: IfNotPresent
-        command: ['sh', '-c', 'for i in $(seq 1 60); do nc -z -w3 elasticsearch.logging 9200 && exit 0 || sleep 5; done; exit 1']
+        command: ['sh', '-c', 'for i in $(seq 1 60); do nc -z -w3 elasticsearch 9200 && exit 0 || sleep 5; done; exit 1']
       containers:
       - name: skywalking-oap
         image: "gcr.io/seata-demo-fd51a7/oap-server:6.4.0-p2"
@@ -158,7 +158,7 @@ spec:
         - name: SW_STORAGE
           value: elasticsearch
         - name: SW_STORAGE_ES_CLUSTER_NODES
-          value: "elasticsearch.logging:9200"
+          value: "elasticsearch:9200"
 #        volumeMounts:
 #        - name: alarm-config
 #          mountPath: /skywalking/config/alarm-settings.yml
@@ -230,7 +230,7 @@ spec:
       - name: wait-for-elasticsearch
         image: busybox:1.30
         imagePullPolicy: IfNotPresent
-        command: ['sh', '-c', 'for i in $(seq 1 60); do nc -z -w3 elasticsearch.logging 9200 && exit 0 || sleep 5; done; exit 1']
+        command: ['sh', '-c', 'for i in $(seq 1 60); do nc -z -w3 elasticsearch 9200 && exit 0 || sleep 5; done; exit 1']
       containers:
       - name: skywalking-oap
         image: "gcr.io/seata-demo-fd51a7/oap-server:6.4.0-p2"
@@ -241,4 +241,4 @@ spec:
         - name: SW_STORAGE
           value: elasticsearch
         - name: SW_STORAGE_ES_CLUSTER_NODES
-          value: "elasticsearch.logging:9200"
+          value: "elasticsearch:9200"
