--- a/install-with-istio.yml
+++ b/install-with-istio.yml
@@ -43,7 +43,6 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: sky-skywalking-skywalking-oap
-    namespace: default
 ---
 # Source: skywalking/templates/oap-svc.yaml
 apiVersion: v1
@@ -148,7 +147,7 @@ spec:
         - name: SW_CLUSTER
           value: kubernetes
         - name: SW_CLUSTER_K8S_NAMESPACE
-          value: "default"
+          value: "logging"
         - name: SW_CLUSTER_K8S_LABEL
           value: "app=skywalking,release=sky,component=skywalking-oap"
         - name: SKYWALKING_COLLECTOR_UID
